Mahout Change Log

Release 0.10.0 - unreleased

  MAHOUT-1667: Hadoop 1 and 2 profile in POM (sslavic)

  MAHOUT-1564: Naive Bayes Classifier for New Text Documents (apalumbo)

  MAHOUT-1524: Script to auto-generate and view the Mahout website on a local machine (Saleem Ansari via apalumbo)

  MAHOUT-1589: Deprecate mahout.cmd due to lack of support

  MAHOUT-1655: Refactors mr-legacy into mahout-hdfs and mahout-mr, Spark now depends on much reduced mahout-hdfs

  MAHOUT-1522: Handle logging levels via log4j.xml (akm)

  MAHOUT-1602: Euclidean Distance Similarity Math (Leonardo Fernandez Sanchez, smarthi)

  MAHOUT-1619: HighDFWordsPruner overwrites cache files (Burke Webster, smarthi)

  MAHOUT-1516: classify-20newsgroups.sh failed: /tmp/mahout-work-jpan/20news-all does not exists in hdfs. (Jian Pan via apalumbo)

  MAHOUT-1559: Add documentation for and clean up the wikipedia classifier example (apalumbo)

  MAHOUT-1598: extend seq2sparse to handle multiple text blocks of same document (Wolfgang Buchnere via akm)

  MAHOUT-1659: Remove deprecated Lanczos solver from spectral clustering in mr-legacy (Shannon Quinn)

  MAHOUT-1612: NullPointerException happens during JSON output format for clusterdumper (smarthi, Manoj Awasthi)

  MAHOUT-1652: Java 7 update (smarthi)

  MAHOUT-1639: Streaming kmeans doesn't properly validate estimatedNumMapClusters -km (smarthi)

  MAHOUT-1493: Port Naive Bayes to Scala DSL (apalumbo)

  MAHOUT-1611: Preconditions.checkArgument in org.apache.mahout.utils.ConcatenateVectorsJob (Haishou Ma via smarthi)

  MAHOUT-1615: SparkEngine drmFromHDFS returning the same Key for all Key,Vec Pairs for Text-Keyed SequenceFiles (Anand Avati, dlyubimov, apalumbo)

  MAHOUT-1610: Update tests to pass in Java 8 (srowen)

  MAHOUT-1608: Add option in WikipediaToSequenceFile to remove category labels from documents (apalumbo)

  MAHOUT-1604: Spark version of rowsimilarity driver and associated additions to SimilarityAnalysis.scala (pferrel)
