@@ -36,6 +36,11 @@ import java.util.HashMap;
 
 import org.apache.mahout.h2obindings.drm.H2ODrm;
 
+// for makeEmptyStrVec
+import water.Key;
+import water.DKV;
+import water.fvec.CStrChunk;
+
 /**
  * Collection of helper methods for H2O backend.
  */
@@ -323,7 +328,7 @@ public class H2OHelper {
     Map<String,Integer> map = m.getRowLabelBindings();
     if (map != null) {
       // label vector must be similarly partitioned like the Frame
-      labels = frame.anyVec().makeZero();
+      labels = makeEmptyStrVec(frame.anyVec());
       Vec.Writer writer = labels.open();
       Map<Integer,String> rmap = reverseMap(map);
       for (int r = 0; r < m.rowSize(); r++) {
@@ -387,6 +392,36 @@ public class H2OHelper {
     Vec[] vecs = vtemplate.makeCons(ncol, 0, null, null);
 
     return new Frame(vecs);
+  }
+
+
+  /**
+   * The following two methods: vecChunkLen and makeEmptyStrVec
+   * are h2o-0.1.25 specific.
+   */
+  public static Vec makeEmptyStrVec(final Vec template) {
+    final int nChunks = template.nChunks();
+    Key<Vec> key = template.group().addVec();
+    final Vec emptystr = new Vec(key, template._espc, null, Vec.T_NUM);
+
+    new MRTask() {
+      @Override protected void setupLocal() {
+        for (int i = 0; i < nChunks; i++) {
+          Key k = emptystr.chunkKey(i);
+          int chklen = vecChunkLen(template, i);
+          int stridx[] = new int[chklen];
+          byte b[] = new byte[1]; b[0] = 0;
+          for (int j = 0; j < chklen; j++) stridx[j] = -1;
+          if (k.home()) DKV.put(k, new CStrChunk(1, b, chklen, stridx), _fs);
+        }
+        if (emptystr._key.home()) DKV.put(emptystr._key, emptystr, _fs);
+      }
+    }.doAllNodes();
+    return emptystr;
+  }
+
+  public static int vecChunkLen(Vec template, int chunk) {
+    return (int) (template._espc[chunk + 1] - template._espc[chunk]);
   }
 
   /**
