@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.10.0 - unreleased
 
+  MAHOUT-1638: H2O bindings fail at drmParallelizeWithRowLabels(...) (Anand Avati via apalumbo)
+
   MAHOUT-1667: Hadoop 1 and 2 profile in POM (sslavic)
 
   MAHOUT-1564: Naive Bayes Classifier for New Text Documents (apalumbo)
